--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
-{% block title %}agileHELPER{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block content %}
-test
+about page
 
 {% endblock %}
