add initial styling

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,31 +1,34 @@
+{% load static %}
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'main.min.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-<nav class="py-4 px-6 flex justify-between bg-teal-500">
-    <a href="{% url 'index' %}" class="text-white">agilehelper</a>
+<body class="bg-slate-800">
+
+<nav class="bg-slate-800 py-4 px-6 flex justify-between ">
+    <a href="{% url 'index' %}" class="text-slate-200">
+        <span class="font-semibold	 text-xl inline-block align-baseline">agile</span>
+        <span class="font-thin	 inline-block align-super">HELPER</span>
+    </a>
     <div class="space-x-4">
-        <a href="{% url 'about' %}" class="text-white">About</a>
+        <a href="{% url 'about' %}" class="text-slate-200">About</a>
 
         {% if not request.user.is_authenticated %}
-            <a href="{% url 'login' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Log in</a>
-            <a href="{% url 'signup' %}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Sign up</a>
+            <a href="{% url 'login' %}" class="py-4 px-2 bg-slate-800  rounded-xl text-slate-200">Log in</a>
+            <a href="{% url 'signup' %}" class="py-4 px-2 bg-slate-800  rounded-xl text-slate-200">Sign up</a>
         {% else %}
             <a href="{% url 'dashboard' %}" class="text-white">Dashboard</a>
-            <a href="{% url 'logout' %}" class="py-4 px-6 bg-red-600 rounded-xl text-white">Log out</a>
+            <a href="{% url 'logout' %}" class="py-4 px-6 bg-slate-800 rounded-xl text-white">Log out</a>
         {% endif %}
     </div>
 </nav>
 
 {% block content %}
 {% endblock %}
-<footer class="py-8 text-center bg-gray-200">
-    <p class="text-xs text-gray-700">Copyright (c) 2023 - agilehelper</p>
-</footer>
+
 </body>
 </html>
