--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -2,11 +2,13 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-    <h1 class="text-xl">Sign up</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
-        {{ form.as_p }}
-
-        <button class="py-4 px-8 bg-teal-500 text-white rounded-xl">Submit</button>
-    </form>
+    <div class="h-screen flex items-center justify-center">
+        <div class="basis-1">
+            <form class="text-slate-200" method="post" action=".">
+                {% csrf_token %}
+                <div class="text-slate-500">{{ form.as_p }}</div>
+                <button class="px-6 mt-2 w-full bg-slate-500 text-slate-200 rounded-lg">Submit</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
