--- a/userprofile/templates/userprofile/signup.html
+++ b/userprofile/templates/userprofile/signup.html
@@ -2,11 +2,29 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-    <h1 class="text-xl">Sign up</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <div class="h-screen flex items-center justify-center">
+        <div class="basis-1">
+            <form class="text-slate-500" method="post" action=".">
+                {% csrf_token %}
+                <div class="form-group row">
 
-        <button class="py-4 px-8 bg-teal-500 text-white rounded-xl">Submit</button>
-    </form>
+                    <label for="username" class="text-slate-500">Username</label>
+                    <div class="text-slate-500">{{ form.username }}</div>
+                </div>
+
+                <div class="form-group row">
+
+                    <label for="username" class="text-slate-500">Password</label>
+                    <div class="text-slate-500">{{ form.password1 }}</div>
+                </div>
+
+                <div class="form-group row">
+
+                    <label for="username" class="text-slate-500">Repeat password</label>
+                    <div class="text-slate-500">{{ form.password2 }}</div>
+                </div>
+                <button class="px-6 mt-2 w-full bg-slate-500 text-slate-200 rounded-lg">Submit</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
